# SnapInk

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  generate_icns.sh  main.cpp
.github/workflows/: ci.yml
cmake/: MacOSXBundleInfo.plist.in  SnapInkPlatform.cmake
docs/superpowers/plans/: 2026-06-27-select-tool-selection-adjust.md  2026-06-27-snapink-mvp.md
docs/superpowers/specs/: 2026-06-27-snapink-mvp-design.md
icons/: app.icns
src/: CMakeLists.txt
src/app/: CaptureController.cpp  CaptureController.h  GlobalMouseController.cpp  GlobalMouseController.h  HotkeyController.cpp  HotkeyController.h  mainwindow.cpp  mainwindow.h
src/core/capture/: CaptureImageComposer.cpp  CaptureImageComposer.h  CapturedScreen.h  ScreenCaptureService.cpp  ScreenCaptureService.h
src/core/clipboard/: ClipboardService.cpp  ClipboardService.h
src/core/globalmouse/: GlobalMouseDragMonitor.cpp  GlobalMouseDragMonitor.h  GlobalMouseDragPlatform.cpp  GlobalMouseDragPlatform.h  GlobalMouseDragPlatform_linux.cpp  GlobalMouseDragPlatform_mac.mm  GlobalMouseDragPlatform_win.cpp  GlobalMouseDragTracker.cpp  GlobalMouseDragTracker.h
src/core/hotkey/: Hotkey.cpp  Hotkey.h  HotkeyConfig.h  HotkeyPlatform.h  HotkeyPlatform_linux.cpp  HotkeyPlatform_mac.cpp  HotkeyPlatform_win.cpp  Hotkey_p.h
src/platform/macos/: MacTrayIconHelper.h  MacTrayIconHelper.mm
src/ui/capture/: AddAnnotationCommand.cpp  AddAnnotationCommand.h  AnnotationSceneController.cpp  AnnotationSceneController.h  CaptureAnnotation.cpp  CaptureAnnotation.h  CaptureInputController.cpp  CaptureInputController.h  CaptureOverlay.cpp  CaptureOverlay.h  CaptureSelectionModel.cpp  CaptureSelectionModel.h  CaptureTool.h  CaptureToolbar.cpp  CaptureToolbar.h
src/ui/pin/: MacWindowHelper.h  MacWindowHelper.mm  PinWindow.cpp  PinWindow.h  PinWindowManager.cpp  PinWindowManager.h
src/ui/tray/: TrayController.cpp  TrayController.h
tests/: CMakeLists.txt  annotation_scene_controller_tests.cpp  capture_image_composer_tests.cpp  capture_input_controller_tests.cpp  capture_overlay_tests.cpp  capture_selection_model_tests.cpp  global_mouse_drag_monitor_tests.cpp  global_mouse_drag_tracker_tests.cpp  hotkey_mac_tests.cpp
tests/fakes/: FakeGlobalMouseDragPlatform.cpp
